--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/lib/style.css">
+    <link href="/lib/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- permet d'avoir accès à la police Raleway -->
     <script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script> <!-- permet d'avoir accès à la bibliothèque fontawesome -->
@@ -67,7 +67,7 @@
             </div></div>
         </div>
 
-        <section>
+        <!-- <section>
 
             <aside id="popular">
                 <h2>Les plus populaires</h2><i class="fas fa-chart-line"></i>
@@ -198,7 +198,7 @@
                 <li><a href="#">Centre d'aide</a></li>
                 <li><a href="#">Nous contacter</a></li>
             </ul>
-        </footer>
+        </footer> -->
     </div>
 </body>
 </html>
