--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div></div>
         </div>
 
-        <!-- <section>
+        <section>
 
             <aside id="popular">
                 <h2>Les plus populaires</h2><i class="fas fa-chart-line"></i>
