modif fichiers css+html pour affichage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/lib/style.css" rel="stylesheet">
+    <link href="./lib/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- permet d'avoir accès à la police Raleway -->
     <script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script> <!-- permet d'avoir accès à la bibliothèque fontawesome -->
@@ -17,7 +17,7 @@
     <div id="bloc_page">
         <header>
             <div id="logo">
-                <img src="/images/logo/Reservia.svg" alt="logo reservia">
+                <img src="./images/logo/Reservia.svg" alt="logo reservia">
                 <p><a href="#" class="menu4">S'inscrire</a></p>
             </div>
             <nav>
@@ -67,7 +67,7 @@
             </div></div>
         </div>
 
-        <section>
+        <!--<section>
 
             <aside id="popular">
                 <h2>Les plus populaires</h2><i class="fas fa-chart-line"></i>
