:lipstick::iphone::computer: refactor : css+html optimisation (header, searchingtool, popular, hosting, footer)

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 
                 <div id="hosting_list">
-                    <a href="#" class="hosting_room">
+                    <a href="#" class="hosting_room hosting_display">
                         <div class="hosting_picture">
                             <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel Le Soleil du matin">
                         </div> <!-- .popular_picture closin' div -->
@@ -187,7 +187,7 @@
                         </div> <!-- popular_description closin' div -->
                     </a> <!-- .popular_room closin' a -->
 
-                    <a href="#" class="hosting_room">
+                    <a href="#" class="hosting_room hosting_display">
                         <div class="hosting_picture">
                             <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel Le Soleil du matin">
                         </div> <!-- .popular_picture closin' div -->
@@ -206,7 +206,7 @@
                         </div> <!-- popular_description closin' div -->
                     </a> <!-- .popular_room closin' a -->
 
-                    <a href="#" class="hosting_room">
+                    <a href="#" class="hosting_room hosting_display2">
                         <div class="hosting_picture">
                             <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel Le Soleil du matin">
                         </div> <!-- .popular_picture closin' div -->
@@ -225,7 +225,7 @@
                         </div> <!-- popular_description closin' div -->
                     </a> <!-- .popular_room closin' a -->
 
-                    <a href="#" class="hosting_room">
+                    <a href="#" class="hosting_room hosting_display2">
                         <div class="hosting_picture">
                             <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel Le Soleil du matin">
                         </div> <!-- .popular_picture closin' div -->
