:lipstick::bug: fix/refactor: add favicon +  fix width activity bug on firefox + fix alt forgotten on img

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./lib/style.css" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> <!-- call api for Raleway font directly, no need to download it -->
     <script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script> <!-- call fontawesome library for icon use -->
+
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon.ico">
     <title>Reservia</title> <!-- visible name on the navtab -->
 </head>
 
@@ -330,7 +333,7 @@
                     <div class="activity_bloc activity_bloc2">
                         <a href="#" class="activity activity1">
                             <div class="activity_picture">
-                                <img src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                                <img src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                             </div> <!-- .activity_picture closin' div -->
                             
                             <div class="activity_description">
